Added support for period selection (for each device). Added support for EEPROM emulation (Using FLASH Memory) at address 0x0800C000

--- a/.cproject
+++ b/.cproject
@@ -37,6 +37,8 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor/Libs&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module&quot;"/>									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module/Libs&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/HAL&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Configuration&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc/Legacy}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/Utilities/Fonts}&quot;"/>
@@ -112,6 +114,8 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor/Libs&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module&quot;"/>									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module/Libs&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/HAL&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Configuration&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc/Legacy}&quot;"/>
@@ -206,6 +210,8 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor/Libs&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module&quot;"/>									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module/Libs&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/HAL&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Configuration&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc/Legacy}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/Utilities/Fonts}&quot;"/>
@@ -281,6 +287,8 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Sensor/Libs&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module&quot;"/>									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Comms_module/Libs&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/HAL&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Node/Configuration&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/HAL_Driver/Inc/Legacy}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/stm32f411e-disco_hal_lib/Utilities/Fonts}&quot;"/>
